# kiasin

./: LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  (+3 more)
src-tauri/: .env  2  Cargo.toml  storybook.json  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: kiasin.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: init_the_database.rs  lib.rs  m20220101_000001_create_table.rs
src-tauri/migration/src/entities/: mod.rs
src-tauri/migration/src/entities/archive/: mod.rs
src-tauri/migration/src/entities/area/: mod.rs
src-tauri/migration/src/entities/card/: mod.rs
src-tauri/migration/src/entities/categorie/: mod.rs
src-tauri/migration/src/entities/component/: mod.rs
src-tauri/migration/src/entities/db/: mod.rs
src-tauri/migration/src/entities/event/: mod.rs
src-tauri/migration/src/entities/media/: mod.rs
src-tauri/migration/src/entities/note/: mod.rs
src-tauri/migration/src/entities/project/: mod.rs
src-tauri/migration/src/entities/resources/: mod.rs
src-tauri/migration/src/entities/tag/: mod.rs
src-tauri/migration/src/entities/template/: mod.rs
src-tauri/migration/src/entities/todo/: mod.rs
src-tauri/migration/src/entities/user/: mod.rs
src-tauri/migration/src/entity/: mod.rs
src-tauri/src/: main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/code/: calender.rs
src-tauri/src/app/commands/: archive_controller.rs  area_controller.rs  mod.rs  project_controller.rs  resources_controller.rs
src-tauri/src/app/commands/Database/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/Todo/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/archive/: mod.rs
src-tauri/src/app/commands/area/: mod.rs  objects.rs
src-tauri/src/app/commands/areas/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/cards/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/components/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/dashboard/: mod.rs
src-tauri/src/app/commands/dashborad/: mod.rs
src-tauri/src/app/commands/events/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/media/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/note/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/project/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/resource/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/tag/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/templates/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/user/: mod.rs  objects.rs
src-tauri/src/app/util/: connetion.rs  mod.rs
(+333 files in other folders)
