[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
] }
serde = "1"
serde_json = "1"
[dependencies.sea-orm-migration]
version = "1.0.0"
features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",          # `DATABASE_DRIVER` feature
]
